[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["classes"]

[project]
name = "classes"
version = "0.0.1"
description = "A Python package for ML in Economics classes (D200)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Irem Sara", email = "xxx" }
]
keywords = ["ML", "Economics]
classifiers = [
    "Intended Audience :: Data Scientists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "torch",
    "torchvision",
    "statsmodels",
    "dask-ml",
    "scikit-learn",
    "lightgbm",
    "glum",
    "optuna",
    "optuna-integration[lightgbm]",
    "dalex",
    "shap",
    "ipykernel",
    "nbformat",
    "matplotlib",
    "seaborn",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=6",
    "pre-commit",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "classes/version.py"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "classes"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = '3.12'
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.docformatter]
pre-summary-newline = true
recursive = true
wrap-descriptions = 88
wrap-summaries = 88

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=classes"
pythonpath = "."